<resources>
    <string name="app_name">Dicoding Event</string>
    <string name="event_picture">Gambar Event</string>
    <string name="event_title">Judul event</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <!--    <string name="title_home">Home</string>-->
    <!--    <string name="title_dashboard">Dashboard</string>-->
    <!--    <string name="title_notifications">Notifications</string>-->
    <string name="upcoming">Upcoming</string>
    <string name="finished">Finished</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!--    <string name="hello_blank_fragment">Hello blank fragment</string>-->

    <string name="event_name">DevCoach 154: ML Android | MediaPipe: Paket Lengkap dari Google untuk Terapkan ML di Android</string>
    <string name="event_summary">Acara ini sepenuhnya GRATIS dan akan diselenggarakan hari Jum\'at, 7 Juni 2024 pukul 16.00 – 17.00 WIB Live di YouTube</string>
    <string name="event_description">
        Deskripsi
    </string>

    <!--    <string name="event_category">Seminar</string>-->
    <!--    <string name="event_owner">Dicoding Event</string>-->
    <!--    <string name="event_city">Online</string>-->
    <!--    <string name="event_quota">2000</string>-->
    <string name="event_registrants">547</string>
    <!--    <string name="event_time">7 June 2024 16:00 – 17:00</string>-->
    <!--    <string name="event_link">https://www.dicoding.com/events/8722</string>-->
    <string name="register">Daftar</string>
    <string name="detail_information">Informasi Lainnya</string>
    <string name="quota_left">Sisa Kuota</string>
    <string name="time">Waktu</string>
    <string name="owner_name">Penyelenggara</string>
    <string name="banner">Banner</string>
    <string name="home">Home</string>
    <string name="search_hint">Cari event</string>
    <string name="event_content_desc">Gambar Acara</string>
    <string name="detail_event">Event Details</string>
    <string name="favorite_button">favorite button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">Favorite</string>
    <string name="favorite_events_title">Favorite Events</string>

    <string name="dark_mode">Dark mode</string>
    <string name="turn_off_dark_mode">Turn off dark mode</string>
    <string name="turn_on_dark_mode">Turn on dark mode</string>

    <string name="daily_reminder">Daily Reminder</string>
    <string name="turn_off_daily_reminder">Turn off daily reminder</string>
    <string name="turn_on_daily_reminder">Turn on daily reminder</string>

    <string name="settings">Settings</string>
</resources>