<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="General">

        <SwitchPreferenceCompat
            app:key="dark_mode"
            app:title="@string/dark_mode"
            app:summaryOn="@string/turn_off_dark_mode"
            app:summaryOff="@string/turn_on_dark_mode"
            app:icon="@drawable/baseline_dark_mode_24"
            app:defaultValue="false" />

        <SwitchPreferenceCompat
            app:key="daily_reminder"
            app:title="@string/daily_reminder"
            app:summaryOn="@string/turn_off_daily_reminder"
            app:summaryOff="@string/turn_on_daily_reminder"
            app:icon="@drawable/baseline_circle_notifications_24"
            app:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>